--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,4 +26,4 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Django Testing project
-      run: python3 manage.py test
+      run: python3 project_receipt/manage.py test
